0.0.9
    o add default concomitant medications panel
0.0.8
    o getUIParamModule: fix issue paramValueVarPair not saved
    o UI: fix to sort modules as selected in the UI for the report
    o UI: fix save module for text parameters, fix save module for multiple group parameter
0.0.7
    o change dependency package for getLabelVar
    o change output path
    o standardize moduleSettings parameters in UI and remove theme in getUIParamModule
0.0.6
    o functionality to export module settings
    o timeLim specification for interval module
0.0.5
    o support multiple variables for moduleTextParamValueVarPair in case moduleTextParamNameVarPair is specified
    o increase shiny.maxRequestSize to 10Gbs
0.0.4
    o remove moduleLabel
    o labelVars
    o fix automic splitting within a module
    o bookmark button
0.0.3
    o fix issue saving parameters for line plot, add error tracking around plot preview
0.0.2
    o include possibility to display selected modules and include default modules
0.0.1
    o initial commit