@@ -13,3 +13,4 @@ import(shiny)
 importFrom(glpgUtilityFct,getLabelVar)
 importFrom(plyr,colwise)
 importFrom(shiny,runApp)
+importFrom(stats,update)
